pajamas: fix wrong background tone in new menus

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -3255,7 +3255,7 @@ regexp('^https?://((next|www)\.)?(gitlab\.(?!(io|biterg)).*)(/.*)?$') {
             button[class*='close'] { c: 0 t t }
             &-header-top { c: 0 bg5 }
             .dropdown-menu:not(#z) {
-                c: 0 bg5 bg1
+                c: 0 bg5 bg2
 
                 /// Fix conflict with btn-link styles.
                 .btn-link.dropdown-item {
